test/corpus/fail/text-module.mo
=========
text-module.mo
=========

"depri"

---

(source_file
  (exp_dec
    (lit_exp
      (text_literal))))
